# MASYV-CORE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  astro.config.mjs
.github/workflows/: deploy.yml
src/: automation.rs  lib.rs  main.rs  security.rs
src/ai/: mod.rs
src/commands/: alias.rs  calculator.rs  env.rs  input.rs  mod.rs  network.rs  notes.rs  todo.rs  voice.rs
src/jarvis/: mod.rs
src/output/: mod.rs
src/pages/: index.astro
src/system/: mod.rs
src/ui/: graphs.rs  mod.rs  shortcuts.rs  theme.rs
