[package]
name = "masyv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34"
egui = "0.34"
console_error_panic_hook = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"